# Data-Preparation-Bench

./: .pre-commit-config.yaml  README.md  pyproject.toml
examples/: compute_mmd.py
src/data_preparation_bench/: mmd.py
src/data_preparation_bench/data/: data_formatter.py  data_loader.py
src/data_preparation_bench/embed/: base.py  cache_wrapper.py  types.py  vllm.py
