[project]
name = "data_preparation_bench"
version = "0.1.0"
description = "Data Preparation Bench"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "addict>=2.4.0",
    "aiohttp>=3.11.0",
    "datasets>=2.14.4",
    "modelscope>=1.34.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pyyaml>=6.0",
    "redis>=7.3.0",
    "scikit-learn>=1.8.0",
    "torch==2.6.0",
    "transformers==4.53.0",
    "vllm==0.8.5.post1",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src", "tests"]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pyright>=1.1.408",
    "pytest>=8.4.1",
]

[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple"
